--- a/Python/md_py/1.md
+++ b/Python/md_py/1.md
@@ -1,4 +1,43 @@
 <head><meta charset="UTF-8"></head>
 
 ##
-python -c 在终端里结果以字符串形式输出 (python -c "print 'A'*64+'B'" | ./pwn1)
+1. python -c 在终端里结果以字符串形式输出 (python -c "print 'A'*64+'B'" | ./pwn1)
+2. 直接运行py文件: 文件开头加上`#!/usr/bin/env python3`,并`$ chmod a+x hello.py`，则`./hello.py`
+3. 中文乱码的解决: 文本编辑器正在使用UTF-8 without BOM编码；文件开头声明`# -*- coding: utf-8 -*-`
+
+##
+### 格式化
+```
+'Hello, %s' % 'world'
+'Hi, %s, you have $%d.' % ('Michael', 1000000)
+print('n1表示为十六进制字符串：{}，n2表示为十六进制字符串：{}'.format(hex(n1),hex(n2)))
+```
+### 函数
+#### 数据类型检查
+数据类型检查可以用内置函数isinstance()实现：
+```
+def my_abs(x):
+    if not isinstance(x, (int, float)):
+        raise TypeError('bad operand type')
+    if x >= 0:
+        return x
+    else:
+        return -x
+```
+#### 返回多个值
+```
+def fun():
+    return x,y
+    #返回值其实是tuple
+
+a,b=fun()
+```
+
+## 杂
+1. 「argv」是「argument variable」参数变量的简写形式，一般在命令行调用的时候由系统传递给程序。
+这个变量其实是一个List列表，argv[0] 一般是被调用的脚本文件名或全路径，和操作系统有关，argv[1]和以后就是传入的数据了。
+
+
+
+
+
