--- a/Python/md_py/1.md
+++ b/Python/md_py/1.md
@@ -32,6 +32,9 @@ def fun():
 
 a,b=fun()
 ```
+### 类
+1. 作用域: self代表实例，self.**是实例变量；在类中但在类的函数外的***是类变量；在类的函数中的***是局部变量。
+2. 全局变量：global ，不要类或实例. 。
 
 ## 杂
 1. 「argv」是「argument variable」参数变量的简写形式，一般在命令行调用的时候由系统传递给程序。
