--- a/Python/md_py/1.md
+++ b/Python/md_py/1.md
@@ -39,7 +39,8 @@ a,b=fun()
 ## 杂
 1. 「argv」是「argument variable」参数变量的简写形式，一般在命令行调用的时候由系统传递给程序。
 这个变量其实是一个List列表，argv[0] 一般是被调用的脚本文件名或全路径，和操作系统有关，argv[1]和以后就是传入的数据了。
-
+2. strip() 去除开始和末尾的空格本身，回车\r，换行\n，制表符\t， 换页符\f
+3. str.splitlines([keepends]) 按照行('\r', '\r\n', \n')分隔，返回一个包含各行作为元素的列表，如果参数 keepends 为 False，不包含换行符，如果为 True，则保留换行符。
 
 
 
