fresh, add st to web

--- a/Python/md_py/1.md
+++ b/Python/md_py/1.md
@@ -1,38 +1,19 @@
 <head><meta charset="UTF-8"></head>
 
-##
+#
 1. python -c 在终端里结果以字符串形式输出 (python -c "print 'A'*64+'B'" | ./pwn1)
 2. 直接运行py文件: 文件开头加上`#!/usr/bin/env python3`,并`$ chmod a+x hello.py`，则`./hello.py`
 3. 中文乱码的解决: 文本编辑器正在使用UTF-8 without BOM编码；文件开头声明`# -*- coding: utf-8 -*-`
 
-##
-### 格式化
+#
+## 格式化
 ```
 'Hello, %s' % 'world'
 'Hi, %s, you have $%d.' % ('Michael', 1000000)
 print('n1表示为十六进制字符串：{}，n2表示为十六进制字符串：{}'.format(hex(n1),hex(n2)))
 ```
-### 格式化时间
-关于parser
-字符串可以很随意，可以用时间日期的英文单词，可以用横线、逗号、空格等做分隔符。
-没指定时间默认是0点，没指定日期默认是今天，没指定年份默认是今年。
->>from dateutil.parser import parse
->>parse("Wed, Nov 12")
-datetime.datetime(2013, 11, 12, 0, 0)
->>parse("2013-08-20")
-datetime.datetime(2013, 8, 20, 0, 0)
->>parse("20130820")
-datetime.datetime(2013, 8, 20, 0, 0)
->>parse("2013,08,20")
-datetime.datetime(2013, 8, 20, 0, 0)
->>parse("08,20")
-datetime.datetime(2013, 8, 20, 0, 0)
->>parse("12:00:00")
-datetime.datetime(2013, 8, 20, 12, 0)
->>parse("this is the wonderful moment 12:00:00,I feel good",fuzzy=True)#fuzzy开启模糊匹配，过滤掉无法识别的时间日期字符
-datetime.datetime(2013, 8, 20, 12, 0)
-### 函数
-#### 数据类型检查
+## 函数
+### 数据类型检查
 数据类型检查可以用内置函数isinstance()实现：
 ```
 def my_abs(x):
@@ -43,7 +24,7 @@ def my_abs(x):
     else:
         return -x
 ```
-#### 返回多个值
+### 返回多个值
 ```
 def fun():
     return x,y
@@ -51,11 +32,11 @@ def fun():
 
 a,b=fun()
 ```
-### 类
+## 类
 1. 作用域: self代表实例，self.**是实例变量；在类中但在类的函数外的***是类变量；在类的函数中的***是局部变量。
 2. 全局变量：global ，不要类或实例. 。
 
-### 错误处理
+## 错误处理
 1. try...except...else...finally
 ```
 try:
@@ -82,7 +63,7 @@ try:
 # 同样是出错，但程序打印完错误信息后会继续执行，并正常退出; 通过配置，logging还可以把错误记录到日志文件里
 ```
 3. 自己抛出错误(raise)
-1. 如果要抛出错误，可以定义一个错误的class，选择好继承关系，然后，用raise语句抛出一个错误的实例：
+  1. 如果要抛出错误，可以定义一个错误的class，选择好继承关系，然后，用raise语句抛出一个错误的实例：
 ```
 class FooError(ValueError):
     pass
@@ -95,7 +76,7 @@ def foo(s):
 
 foo('0')
 ```
-2. 捕获错误，打印一个ValueError!后，又把错误通过raise语句抛出去了。
+  2. 捕获错误，打印一个ValueError!后，又把错误通过raise语句抛出去了。
 ```
 
 def foo(s):
@@ -113,10 +94,156 @@ def bar():
         # 其它情况下，还可raise ValueError('input error!')
 bar()
 ```
+  3. 用户自定义异常(raise抛出异常，try...except捕获)
+  在程序中可以通过创建新的异常类型来命名自己的异常（Python 类的内容请参见 类 ）。异常类通常应该直接或间接的从 Exception 类派生，例如:
+```
+class MyError(Exception):
+    def __init__(self, value):
+        self.value = value
+    def __str__(self):
+        return repr(self.value)
+
+try:
+    raise MyError(2*2)
+except MyError as e:
+    print('My exception occurred, value:', e.value)
+```
+如果一个新创建的模块中需要抛出几种不同的错误时，一个通常的作法是为该模块定义一个异常基类，然后针对不同的错误类型派生出对应的异常子类
+
+## 时间处理
+### 时区处理
+由于存在datetime模块，time模块，在datetime模块下又存在datetime类，time类，为避免阅读上的误解，以下说到time, datetime时指模块，datetime.time, datetime.datetime指datetime模块下的time类和datetime类。
+1. datetime模块定义了如下类：
+```
+datetime.date     - 理想化的日期对象，假设使用格力高历，有year, month, day三个属性
+datetime.time     - 理想化的时间对象，不考虑闰秒（即认为一天总是24*60*60秒），有hour, minute, second, microsecond, tzinfo五个属性
+datetime.datetime     - datetime.date和datetime.time的组合
+datetime.timedelta     - 后面我们会用到的类，表示两个datetime.date, datetime.time或者datetime.datetime之间的差。
+datetime.tzinfo     - 时区信息
+#####################
+time模块提供了各种时间操作转换的方法。
+calendar模块则是提供日历相关的方法。
+```
+2. dateutil.parser 格式化时间
+关于parser
+字符串可以很随意，可以用时间日期的英文单词，可以用横线、逗号、空格等做分隔符。
+没指定时间默认是0点，没指定日期默认是今天，没指定年份默认是今年。
+```
+>>from dateutil.parser import parse
+>>parse("Wed, Nov 12")
+datetime.datetime(2013, 11, 12, 0, 0)
+>>parse("2013-08-20")
+datetime.datetime(2013, 8, 20, 0, 0)
+>>parse("20130820")
+datetime.datetime(2013, 8, 20, 0, 0)
+>>parse("2013,08,20")
+datetime.datetime(2013, 8, 20, 0, 0)
+>>parse("08,20")
+datetime.datetime(2013, 8, 20, 0, 0)
+>>parse("12:00:00")
+datetime.datetime(2013, 8, 20, 12, 0)
+>>parse("this is the wonderful moment 12:00:00,I feel good",fuzzy=True)#fuzzy开启模糊匹配，过滤掉无法识别的时间日期字符
+datetime.datetime(2013, 8, 20, 12, 0)
+```
+3. datetime用法
+  1. pytz
+  ```
+  import pytz
+  pytz.all_timezones # 列举全球的timezone
+  tz  = pytz.timezone('Asia/Shanghai') # 构建一个tzinfo对象
+  ```
+  2. timestamp和datetime的转换。timestamp，一个数字，表示从UTC时间1970/01/01开始的秒数
+  ```
+  >>> from datetime import datetime
+  >>> datetime.fromtimestamp(0, pytz.timezone('UTC'))
+  datetime.datetime(1970, 1, 1, 0, 0, tzinfo=<UTC>)
+
+  >>> tz  = pytz.timezone('Asia/Shanghai')
+  >>> tz2 = pytz.timezone('US/Eastern')
+
+  >>> datetime.fromtimestamp(0, tz)
+  datetime.datetime(1970, 1, 1, 8, 0, tzinfo=<DstTzInfo 'Asia/Shanghai' CST+8:00:00 STD>)
+
+  >>> datetime.fromtimestamp(0, tz2)
+  datetime.datetime(1969, 12, 31, 19, 0, tzinfo=<DstTzInfo 'US/Eastern' EST-1 day, 19:00:00 STD>)
+  ```
+  3. datetime模块同时提供了datetime对象，time对象，date对象
+  ```
+  >>> d = datetime.date(2014, 8, 20)
+  >>> t = datetime.time(11, 30)
+  >>> dt = datetime.datetime.combine(d, t)
+  datetime.datetime(2014, 8, 20, 11, 30)
+  >>> dt.date()
+  datetime.date(2014, 8, 20)
+  >>> dt.time()
+  datetime.time(11, 30)
+
+  >>> dt = datetime.datetime.fromtimestamp(1405938446, pytz.timezone('UTC'))
+  datetime.datetime(2014, 7, 21, 10, 27, 26, tzinfo=<UTC>)
+  >>> dt.date()
+  datetime.date(2014, 7, 21)
+  >>> dt.time()
+  datetime.time(10, 27, 26)
+  >>> dt.timetz()
+  datetime.time(10, 27, 26, tzinfo=<UTC>)
+
+  >>> datetime.datetime.combine(dt.date(), dt.time())
+  datetime.datetime(2014, 7, 21, 10, 27, 26)
+  >>> datetime.datetime.combine(dt.date(), dt.timetz())
+  datetime.datetime(2014, 7, 21, 10, 27, 26, tzinfo=<UTC>)
+  ```
+  简单说就是，datetime可以取得date和time对象，datetime和time对象可以带timezone信息。date和time对象可以使用datetime.datetime.combine合并获得datetime对象。
+  4. 日期的加减 datetime，date对象都可以使用timedelta来进行
+  ```
+  >>> d1 = datetime.datetime(2014, 5, 20)
+  >>> d2 = d1+datetime.timedelta(days=1, hours=2)
+  >>> d1
+  datetime.datetime(2014, 5, 20, 0, 0)
+  >>> d2
+  datetime.datetime(2014, 5, 21, 2, 0)
+  >>> x = d2 - d1
+  >>> x
+  datetime.timedelta(1, 7200)
+  >>> x.seconds
+  7200
+  >>> x.days
+  1
+  ```
+  5. 如何对datetime对象正确设置timezone信息，时区转换 astimezone
+  ```
+  >>> ddt1 = datetime.datetime(2014, 8, 20, 10, 0, 0, 0, pytz.timezone('Asia/Shanghai'))
+  >>> ddt1
+  datetime.datetime(2014, 8, 20, 10, 0, tzinfo=<DstTzInfo 'Asia/Shanghai' LMT+8:06:00 STD>)
+  >>> ddt2
+   datetime.datetime(2014, 8, 20, 11, 0)
+
+  >>> ddt1.astimezone(pytz.utc)
+  datetime.datetime(2014, 8, 20, 1, 54, tzinfo=<UTC>)
+  >>> ddt2.astimezone(pytz.utc)
+  ValueError: astimezone() cannot be applied to a naive datetime
+
+  >>> tz = timezone('Asia/Shanghai')
+  >>> tz.localize(ddt1)
+  ValueError: Not naive datetime (tzinfo is already set)
+  >>> tz.localize(ddt2)
+  datetime.datetime(2014, 8, 20, 11, 0, tzinfo=<DstTzInfo 'Asia/Shanghai' CST+8:00:00 STD>)
+  ```
+  这里抛出来的ValueError，引入了一个naive datetime的概念。简单说naive datetime就是不知道时区信息的datetime对象。没有timezone信息的datetime理论上讲不能定位到具体的时间点。所以对于设定了timezone的datetime对象，可以使用astimezone方法将timezone设定为另一个。对于不包含timezone的datetime对象，使用timezone.localize方法设定timezone。
+  datetime直接传入timezone对象构建出来的带timezone的datetime对象和使用locallize方法构建出来的datetime对象，在打印出来的时候tzinfo显示有所不同，一个是LMT+8:06，一个是CST+8:00，不用说了，54分就搁这来的吧。LMT学名Local Mean Time，用于比较平均日出时间的。有兴趣的可以自己看看Shanghai和Urumqi的LMT时间。CST是China Standard Time，不用解释了。
+  最保险的方法是使用locallize方法构造带时区的时间.
+  6. replace替换小时等信息
+  ```
+  >>> d2
+  datetime.datetime(2015, 5, 28, 1, 43, 41, tzinfo=<DstTzInfo 'Asia/Shanghai' CST+8:00:00 STD>)
+  >>> d2.replace(hour=21, minute=0)
+  >>> d2
+  datetime.datetime(2015, 5, 28, 21, 0, 41, tzinfo=<DstTzInfo 'Asia/Shanghai' CST+8:00:00 STD>)
+  ```
+  7. 生成当前时间
+  > datetime.datetime.now(pytz.timezone('UTC'))  # UTC时间
 
 
-
-## 杂
+# 杂
 1. 「argv」是「argument variable」参数变量的简写形式，一般在命令行调用的时候由系统传递给程序。
 这个变量其实是一个List列表，argv[0] 一般是被调用的脚本文件名或全路径，和操作系统有关，argv[1]和以后就是传入的数据了。
 2. strip() 去除开始和末尾的空格本身，回车\r，换行\n，制表符\t， 换页符\f
